@@ -239,6 +239,7 @@ $table->columns(array(
 $table->column_attr('rank', 'class', 'first');
 $table->column_attr('team_name', 'class', 'left');
 $table->column_attr('team_srat', 'class', 'right');
+$table->column_attr('run_support', 'class', 'primary');
 //$table->column_attr('rank', 'class', 'left');
 //$table->header_attr('rank', 'colspan', '2');
 $ps->index_table_mod($table);
