@@ -206,6 +206,8 @@ $atable->columns(array(
 ));
 $atable->column_attr('season', 'class', 'first');
 $atable->column_attr('pythag_plus', 'class', 'right');
+$atable->column_attr('win_percent', 'class', 'primary');
+$atable->column_attr('pythag', 'class', 'secondary');
 $ps->team_advanced_table_mod($atable);
 $cms->filter('team_advanced_table_object', $atable);
 
@@ -242,6 +244,7 @@ $dtable->columns(array(
 ));
 $dtable->column_attr('season', 'class', 'first');
 $dtable->column_attr('team_drat', 'class', 'right');
+$dtable->column_attr('team_ra', 'class', 'primary');
 $ps->team_defence_table_mod($dtable);
 $cms->filter('team_defence_table_object', $dtable);
 
@@ -280,6 +283,7 @@ $otable->columns(array(
 ));
 $otable->column_attr('season', 'class', 'first');
 $otable->column_attr('team_srat', 'class', 'right');
+$otable->column_attr('run_support', 'class', 'primary');
 $ps->team_offence_table_mod($otable);
 $cms->filter('team_offence_table_object', $otable);
 
