@@ -209,7 +209,7 @@ span.neg {
 	color: #ff0000;
 }
 span.pos {
-	color: #00cd00;
+	color: #009a00;
 }
 .ps-table tr { background-color: #EEE; }
 .ps-table tr.even { background-color: #E0E0E0; }
@@ -280,9 +280,34 @@ span.pos {
 	padding: 0.5em 0;
 }
 
-#ps-container .ps-table .left   { text-align: left; }
+#ps-container .ps-table .first	{
+	background-color: #f5f5f5;
+	color: #7d7d7d;
+	text-align: center;
+}
+#ps-container .ps-table tr.even .first {
+	background-color: #eaeaea;
+}
+#ps-container .ps-table .left  {
+	background-color: #e1e1e1;
+	text-align: left;
+}
+#ps-container .ps-table tr.even .left { background-color: #d3d3d3; }
 #ps-container .ps-table .right  { text-align: center; }
 #ps-container .ps-table .center { text-align: center; }
+#ps-container .ps-table .primary,
+#ps-container .ps-table .secondary {
+	background-color: #d6d6d6;
+	color: #af1919;
+	font-weight: bold;
+	text-align: center;
+}
+#ps-container .ps-table .secondary {
+	background-color: #e1e1e1;
+	font-weight: normal;
+}
+#ps-container .ps-table tr.even .primary { background-color: #c3c3c3; }
+#ps-container .ps-table tr.even .secondary { background-color: #d3d3d3; }
 
 /* --- Style for flag and icon images in the team list */
 #ps-container .ps-table .left img  {
